[package]
name = "ConsolePauser"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
widestring = "1.1.0"
windows = { version = "0.58.0", features = [
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
] }
